--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div class="title">
             <h1>Talk Me</h1>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque recusandae provident modi corrupti impedit veniam inventore voluptate, mollitia vel ducimus. Recusandae ex et officia totam earum, natus culpa vero. Aspernatur!</p>
+
             
         </div>
     </div>
